--- a/rick-and-morty/styles/globals.css
+++ b/rick-and-morty/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Helvetica", sans-serif;
-  background-color: #111;
+  background: #f8f8f8;
 }
 
 a {
@@ -13,4 +13,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+textarea,
+p {
+  padding: 0;
+  margin: 0;
 }
